# Allocators

./: Array.h  CMakeLists.txt  DoubleLinkedListAllocator.cpp  DoubleLinkedListAllocator.h  DoublyLinkedListAllocator.cpp  DoublyLinkedListAllocator.h  LineAllocator.cpp  LineAllocator.h  LinearAllocator.cpp  LinearAllocator.h  LinkedListAllocator.cpp  MemoryBlock.cpp  MemoryBlock.h  MemoryBlocksContainer.h  StackAllocator.cpp  StackAllocator.h  main.cpp
AllocatorsLib/: Array.h  CMakeLists.txt  LinearAllocator.cpp  LinearAllocator.h  LinkedListAllocator.cpp  LinkedListAllocator.h  MemoryBlock.cpp  MemoryBlock.h  MemoryBlocksContainer.h
AllocatorsLibTests/: AllocatorsTests.cpp  CMakeLists.txt  RunTests.cpp  RunTests.h  TestsRunner.h
include/: LinearAllocator.h  LinkedListAllocator.h  MemoryBlock.h  StackAllocator.h
source/: LinearAllocator.cpp  LinkedListAllocator.cpp  MemoryBlock.cpp  StackAllocator.cpp
